5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1800_2567.log
== TEST (2019-06-11 10:54:24) 
-- CODE:

j = int(input("numero"))

for i in j:
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    for i in j:
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:55:44) 
-- CODE:

j = int(input("numero: "))

for i in j:
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    for i in j:
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:56:16) 
-- CODE:

j = int(input("numero: "))

for i in range(j):
print(i)
-- ERROR:
File "XXXX", line 5
    print(i)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:57:16) 
-- CODE:

j = int(input("numero: "))

for i in range(j):
	print((i-1)*"*")
-- OUTPUT:
*
**
***
****
*****
******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:58:59) 
-- CODE:

j = int(input("numero: "))

for i in range(j):
	print((i+1)*"*")
	print((i-1)*"*")
-- OUTPUT:
*

**

***
*
****
**
*****
***
******
****
*******
*****
********
******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:07:35) 
-- CODE:

j = int(input("numero: "))

for i in range(j):
	print((j+1)*"*" )
	
for i in range(j):
	print((i - 1)*'*')
   
-- OUTPUT:
*********
*********
*********
*********
*********
*********
*********
*********


*
**
***
****
*****
******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:08:06) 
-- CODE:

j = int(input("numero: "))

for i in range(j):
	print((j-1)*"*" )
	
for i in range(j):
	print((i + 1)*'*')
   
-- OUTPUT:
*******
*******
*******
*******
*******
*******
*******
*******
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:08:34) 
-- CODE:

j = int(input("numero: "))

for i in range(j):
	print((j-i)*"*" )
	
for i in range(j):
	print((i + 1)*'*')
   
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:08:42) 
-- CODE:

j = int(input("numero: "))

for i in range(j):
	print((j-i)*"*" )
	
for i in range(j):
	print((i + 1)*'*')
   
-- EXECUTION TIME:
0.771159
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
